--- a/common-components/translations/et/common.json
+++ b/common-components/translations/et/common.json
@@ -1,5 +1,6 @@
 {
   "global": {
+    "email": "Email",
     "save": "Salvesta",
     "add": "Lisa",
     "edit": "Muuda",
@@ -45,6 +46,11 @@
     "forward": "Suuna",
     "chosen": "Valitud",
     "read": "Loetud"
+  },
+  "sorting": {
+    "des": "kahanevalt",
+    "asc": "Kasvavalt",
+    "sorting": "Sorteerimine"
   },
   "mainMenu": {
     "menuLabel": "Põhinavigatsioon",
